<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_sd_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_sd_name" />

    <EditText
        android:id="@+id/et_sd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_sd_text" />

    <Button
        android:id="@+id/bt_sd_path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_sd_path" />

    <Button
        android:id="@+id/bt_sd_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_sd_write" />

    <Button
        android:id="@+id/bt_sd_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_sd_read" />


</LinearLayout>