<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LandActivity">
<TextView
    android:layout_width="match_parent"
    android:textStyle="bold"
    android:textSize="30sp"
    android:textColor="@color/colorGray"
    android:text="@string/hello"
    android:layout_height="wrap_content"/>
    <EditText
        android:layout_width="200dp"
        android:text="@string/thx"
        android:layout_height="wrap_content"/>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/press"
        android:layout_height="wrap_content"/>
</LinearLayout>