<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_list_dialog"
        android:layout_width="match_parent"
        android:text="@string/bt_dialog_list"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_radio_dialog"
        android:layout_width="match_parent"
        android:text="@string/bt_dialog_radio"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_homework_dialog2"
        android:layout_width="match_parent"
        android:text="@string/bt_dialog_city"
        android:layout_height="wrap_content" />


</LinearLayout>