<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogbox.InputDialogBoxActivity">

    <EditText
        android:id="@+id/et_papa_name"
        android:layout_width="match_parent"
        android:hint="@string/et_dialog_papa"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/et_mama_name"
        android:layout_width="match_parent"
        android:hint="@string/et_dialog_mama"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_input_parent"
        android:layout_width="match_parent"
        android:text="@string/bt_dialog_input_name"
        android:layout_height="wrap_content" />
</LinearLayout>