<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dialogbox.DialogBoxActivity">

    <Button
        android:id="@+id/bt_basic_dialog"
        android:layout_width="match_parent"
        android:text="@string/bt_dialogBox_basic"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_select_dialog"
        android:layout_width="match_parent"
        android:text="@string/bt_dialogBox_select"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_homework_dialog"
        android:layout_width="match_parent"
        android:text="@string/bt_dialogBox_homework"
        android:layout_height="wrap_content" />

</LinearLayout>