<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".clipboard.Clipboard1">

    <EditText
        android:id="@+id/et_clip_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/bt_clip_copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_clip_copy" />

    <Button
        android:id="@+id/bt_clip_paste"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_clip_paste" />
    <Button
        android:id="@+id/bt_clip_cut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_clip_cut" />

</LinearLayout>